[gd_scene load_steps=5 format=2]

[ext_resource path="res://Hex/Hex.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Blocks/Block3D.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.5, 0.85, 1 )

[node name="Block" type="StaticBody" groups=[
"blocks",
]]
script = ExtResource( 2 )

[node name="Visuals" type="Spatial" parent="."]

[node name="Hex" type="MeshInstance" parent="Visuals"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = ExtResource( 1 )
material/0 = SubResource( 1 )

[node name="BallPowerUp" type="Spatial" parent="Visuals"]

[node name="ShadowPowerUp" type="Spatial" parent="Visuals"]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.01

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( -0.866026, -0.5, 0, 0.5, -0.866026, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="CollisionShape3" type="CollisionShape" parent="."]
transform = Transform( 0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 2 )
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
